# portalbox

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  Readme.md
.github/workflow/: release.yaml
.github/workflows/: release.yaml
crates/client/: Cargo.toml
crates/client/src/: api.rs  cli.rs  client_instance.rs  config.rs  credentials.rs  downloader.rs  error.rs  main.rs  proxy_client.rs  reset.rs  telemetry.rs  tls_client.rs  tunnel.rs  utils.rs  version.rs  website.rs
crates/models/: Cargo.toml
crates/models/src/: consts.rs  lib.rs  protocol.rs  secrets.rs  utils.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
website/static/: package-lock.json  package.json
website/templates/: about.html  already_signed_in.html  base.html  contact.html  contact_post.html  content_page.html  go_online.html  index.html  new_service.html  new_service_post.html  signin.html  signin_guest.html  sysinfo.html  terminal.html
website/templates/partials/: default_header.html  side_bar.html
