[package]
edition = "2021"
name = "client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "portalbox"
path = "src/main.rs"

[dependencies]
models = { path = "../models" }

anyhow = "1.0.45"
axum = { version = "0.5.0", features = ["ws"] }
backoff = { version = "0.4.0", features = ["tokio"] }
byte-unit = "4.0.14"
bytes = "1.1.0"
cfg-if = "1.0.0"
clap = { version = "3.1.8", features = ["derive"] }
concurrent-queue = "1.2.2"
config = { version = "0.13.0", default-features = false, features = ["toml"] }
dashmap = "5.2.0"
dirs = "4.0.0"
dotenv = "0.15.0"
duct = "0.13.5"
enigo = "0.0.14"
flate2 = "1.0.22"
futures = "0.3"
futures-util = "0.3.8"
http = "0.2.6"
hyper = { version = "0.14.14", features = ["full"] }
indicatif = "0.16.2"
portable-pty = "0.7.0"
pulldown-cmark = { version = "0.9.0", default-features = false }
reqwest = { version = "0.11.5", default-features = false, features = [
    "json",
    "multipart",
    "stream",
    "rustls-tls-native-roots",
] }
rustls-native-certs = "0.6.2"
secrecy = "0.8.0"
semver = "1.0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.23.10"
tar = "0.4.38"
tera = "1.15.0"
thiserror = "1.0.30"
tokio = { version = "1.13.0", features = ["full"] }
tokio-rustls = "0.23.3"
tokio-util = "0.7.1"
toml = "0.5.6"
tower = "0.4.10"
tower-http = { version = "0.3.1", features = ["fs", "trace"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1.0.0", features = ["v4", "serde"] }

opentelemetry = { version = "0.17.0", features = [
    "rt-tokio",
    "metrics",
    "serialize",
] }
opentelemetry-otlp = { version = "0.10.0", features = [
    "tonic",
    "tls",
    "tls-roots",
] }
tonic = "0.6.2"
tracing = "0.1"
tracing-opentelemetry = "0.17.1"
tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
