[package]
edition = "2021"
name = "models"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
semver = { version = "1.0.7", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.13.0", features = ["io-util"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
